# oshi-chan

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  fly.toml  output.html  results.html  test.html
.github/workflows/: deploy-oshi-chan.yml
oshi-chan/: Cargo.toml  Dockerfile  fly.toml
oshi-chan/migrations/2023-05-14-030102_create_watchlist/: down.sql  up.sql
oshi-chan/src/: commands.rs  environment.rs  handler.rs  jobs.rs  main.rs
oshi-chan/src/commands/: introduce.rs  poll.rs  version.rs  watchlist_add.rs  watchlist_delete.rs  watchlist_destroy.rs  watchlist_list.rs
oshi-chan/src/jobs/: check_for_new_releases.rs  oshi_job.rs
oshi-hourly-cron/: Cargo.toml
pg/: README.md  fly.toml
pg-client/: Cargo.toml
pg-client/migrations/2023-05-14-030102_create_watchlist/: up.sql
pg-client/src/: lib.rs  models.rs  schema.rs
scrape-9anime/: Cargo.toml
scrape-9anime/sample-html/: mashle.html  naruto.html
scrape-9anime/src/: browser_utils.rs  lib.rs  main.rs
scrape-aniwave/: Cargo.toml
scrape-aniwave/examples/: example.html  mashle-magic-and-muscles.7j2zj-ep-3.html
scrape-aniwave/src/: browser_utils.rs  lib.rs  main.rs
src/: environment.rs  handler.rs  handlers.rs  main.rs
src/commands/: introduce.rs  version.rs
