[package]
name = "oshi-chan"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serenity = "0.11.5"
tokio = { version = "1.29.1", features = ["full"] }
pg-client = { path = "../pg-client" }
scrape-aniwave = { path = "../scrape-aniwave" }
tokio-cron-scheduler = { version = "0.9.4", features = ["signal"] }

[dev-dependencies]
mockall = "0.11.4"
