[package]
name = "scrape-9anime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "1.0.5"
scraper = "0.16.0"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
